--- a/generic.html
+++ b/generic.html
@@ -28,26 +28,20 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/space pink.jpg" alt="" /></span>
-
-								<h2>Welcome!</h2>
-                                <p>My name is Nada Aboubakr, and I am passionate about data science and technology. With a strong academic background and hands-on experience, I strive to make impactful contributions in the field of data analysis and computational modeling.</p>
-                                
-                                <h2>Educational Journey</h2>
-                                <p>I have pursued my studies in Data Science, graduating with honors from Alexandria Univer. My education has equipped me with robust knowledge in data analysis, machine learning, and statistical modeling.</p>
+								<span class="image main"><img src="images\220782.gif" alt="" /></span>
 
                                 <h2>Projects</h2>
                                 <p>I have worked on several projects, most notably, 'Enhancing Drug Combination Safety,' where I collaborated with a team to develop advanced computational models for predicting drug-drug interactions and identifying synergistic drug combinations. My other significant projects include:</p>
 									<ul>
-										<li>Mortgage Backed Securities Prepayment Risk Prediction: Utilized supervised machine learning to predict mortgage-backed securities prepayment risk, enhancing financial decision-making with data-driven insights.</li>
-										<li>NLP-based software application for detecting suicidal posts in Modern Standard Arabic: Developed a software application using Natural Language Processing (NLP) techniques to detect suicidal posts, contributing to mental health awareness initiatives.</li>
-										<li>Hotel Database Management System (DBMS): Collaborated on a group project implementing database theories and creating models for a hotel database management system using ORACLE DB.</li>
+										<li><a href="https://github.com/NadaAboubakr/Predictive-Modelling-on-Mortgage-Backed-Securities-Using-Supervised-ML">Mortgage Backed Securities Prepayment Risk Prediction</a>: Utilized supervised machine learning to predict mortgage-backed securities prepayment risk, enhancing financial decision-making with data-driven insights.</li>
+										<li><a href="https://drive.google.com/file/d/17cjQF-PvGlZ4WXUbAHrks1xP_DPP1lm5/view?usp=sharing">NLP-based software application for detecting suicidal posts in Modern Standard Arabic</a>: Developed a software application using Natural Language Processing (NLP) techniques to detect suicidal posts, contributing to mental health awareness initiatives.</li>
+										<li><a href="https://github.com/NadaAboubakr/Hotel-DBMS">Hotel Database Management System (DBMS)</a>: Collaborated on a group project implementing database theories and creating models for a hotel database management system using ORACLE DB.</li>
 									</ul> 
 
 								<h2>Certifications</h2>
 								<ul>
 								<li>Data Scientist Certificate - IBM</li> 
-								<li>Data Analyst in Power BI - Data Camp</li>
+								<li>Associate Data Analyst in Sql - Data Camp</li>
 								<li>Artificial Intelligence - My Communication Academy</li>
 								<li>Forward Program - McKinsey & Company, Inc.</li>
 								</ul>
@@ -56,8 +50,8 @@
                                 <p>Having lived and studied in Qatar and Egypt, I have had the privilege of interacting with diverse cultures and perspectives. This experience has enriched my understanding and broadened my vision, allowing me to excel in various academic and extracurricular activities. I have consistently ranked among the top students in my class, earning recognition and awards in multiple contests.</p>
 
                                 <h2>Current Aspirations</h2>
-                                <p>Currently, I am applying for the SNU master's degree program in Data Science, aiming to further my education and research in this exciting field. I am also looking forward to participating in a camp in Hurghada, Egypt, as a Co-Trainer or Facilitator in the fields of language skills and personal development.</p>
-
+                                <p>As I move forward in my career, I am deeply committed to expanding my knowledge and skills in data science. My passion for this field drives me to continuously seek out new opportunities for learning and growth. Currently, I am applying for a master's degree program that will allow me to delve deeper into advanced topics and cutting-edge research in data science.</p>
+								<p>Beyond formal education, I am also eager to engage in projects that challenge me to think creatively and solve real-world problems. I believe that the combination of rigorous academic training and hands-on experience will equip me to make meaningful contributions to the field. My ultimate goal is to apply what I learn to develop innovative solutions that have a positive impact on society.</p>
 								
 
                                 <h2>Get in Touch</h2>
