--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<h2>Contact Information</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>Janaklese, Alexandria 21532 &bull; Egypt</dd>
+								<dd>Cairo, &bull; Egypt</dd>
 								<dt>Phone</dt>
 								<dd>(+20) 1028137862</dd>
 								<dt>Email</dt>
